--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>Pruebas con git</h1>
+    <div id="container">
+        <div id="post">
+            <h1>Pruebas con git</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error, tempore. Magni amet porro soluta, laudantium consequatur facere ab magnam voluptates, laboriosam inventore iusto nostrum fugit tempora ad! A, sint nesciunt?</p>
+        </div>
+    </div>
+    
 </body>
 </html>
