estructura inicial de la cabecera

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">
+            <h1>Cabecera</h1>
+        </div>
         <div id="post">
             <h1>Pruebas con git</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error, tempore. Magni amet porro soluta, laudantium consequatur facere ab magnam voluptates, laboriosam inventore iusto nostrum fugit tempora ad! A, sint nesciunt?</p>
