--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <div id="post">
             <h1>Pruebas con git</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error, tempore. Magni amet porro soluta, laudantium consequatur facere ab magnam voluptates, laboriosam inventore iusto nostrum fugit tempora ad! A, sint nesciunt?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique eum cupiditate sed, nam adipisci, odit deleniti totam molestiae obcaecati assumenda quis voluptate doloribus inventore aperiam maxime doloremque tempora sapiente iusto.</p>
         </div>
     </div>
     
