Modifique la cabecera y el color del texto

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Cabecera<span id="tagline">Tu cabecera de confianza</span>
+            Cabecera<span id="tagline">Mi blog de confianza</span>
         </div>
         <div id="post">
             <h1>Pruebas con git</h1>
