Agregue suscripción, cambie la cabera y puse todo en azul

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Cabecera<span id="tagline">Tu cabecera de confianza</span>
+            Cabecera<span id="tagline">Tu blog maestro</span>
         </div>
         <div id="post">
             <h1>Pruebas con git</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error, tempore. Magni amet porro soluta, laudantium consequatur facere ab magnam voluptates, laboriosam inventore iusto nostrum fugit tempora ad! A, sint nesciunt?</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique eum cupiditate sed, nam adipisci, odit deleniti totam molestiae obcaecati assumenda quis voluptate doloribus inventore aperiam maxime doloremque tempora sapiente iusto.</p>
+            <p>Suscribite y dale like</p>
         </div>
     </div>
     
