Color de fondo, logo nuevo logo

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 <body>
     <div id="container">
         <div id="cabecera">
+            <img src="./img/LOGO-FINAL-1-PNG.png" alt="Logo Amphitech" width="85px" height="85px">
             Cabecera<span id="tagline">Mi blog de confianza</span>
         </div>
         <div id="post">
             <h1>Pruebas con git</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error, tempore. Magni amet porro soluta, laudantium consequatur facere ab magnam voluptates, laboriosam inventore iusto nostrum fugit tempora ad! A, sint nesciunt?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique eum cupiditate sed, nam adipisci, odit deleniti totam molestiae obcaecati assumenda quis voluptate doloribus inventore aperiam maxime doloremque tempora sapiente iusto.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis tempora amet deserunt expedita tenetur, hic vel delectus, molestias ipsum ea eaque quibusdam. Excepturi accusantium maxime assumenda voluptatum corporis officiis velit!Dolorum consequatur totam ut enim blanditiis dolorem eveniet fuga aspernatur magnam eius explicabo recusandae ipsa corporis, hic facere nemo vel sint voluptatibus asperiores distinctio rerum iure? Modi quis alias non?</p>
             <p>Suscribite y dale like</p>
         </div>
     </div>
