--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique eum cupiditate sed, nam adipisci, odit deleniti totam molestiae obcaecati assumenda quis voluptate doloribus inventore aperiam maxime doloremque tempora sapiente iusto.</p>
             <p>Suscribite y dale like</p>
         </div>
+        <div id="footer">
+            Hecho con amor ._.
+        </div>
     </div>
     
 </body>
