Cambio de typos

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="container">
         <div id="cabecera">
             <img src="./img/LOGO-FINAL-1-PNG.png" alt="Logo Amphitech" width="85px" height="85px">
-            Cabecera<span id="tagline">Mi blog de confianza</span>
+            Cabecera<span id="tagline">Tu blog de confianza</span>
         </div>
         <div id="post">
             <h1>Pruebas con git</h1>
